welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:5: error: not found: value diag2
                            return diag2}
                                   ^